--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #9ec2ec;
+}
 .compra_cordoba{
     display: flex;
     justify-content: space-evenly;
@@ -7,7 +10,7 @@
     justify-content: space-evenly;
 }
 h1{
-    background-color: #18e6dc;
+    background-color: #03398b;
     color: black;
     text-align: center;
 }
@@ -22,7 +25,7 @@ h2{
     height: 200px;
 }
 .card-body{
-    background-color: #ccedf1;
+    background-color: #e3e9ea;
     height: auto;
 }
 
